# lab07-grpc

./: CMakeLists.txt  Makefile  README.md  gateway.go  go.sum
ccpkg/: suggest.grpc.pb.cc  suggest.grpc.pb.h  suggest.pb.cc  suggest.pb.h
ccpkg/google/api/: annotations.pb.h
ccpkg/google/rpc/: status.pb.cc  status.pb.h
cmake/: config.cmake
include/: suggest_service.hpp  utils.h
pkg/echo/: echo.pb.go  echo.pb.gw.go
pkg/suggest/: echo.pb.go  echo.pb.gw.go
protos/: echo.proto  suggest.proto
sources/: main.cpp  suggest.cpp  utils.cpp
